--- a/style.css
+++ b/style.css
@@ -132,3 +132,80 @@ nav a.active {
 .project-link:hover {
   background-color: #1b3a57;
 }
+
+.section {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+/* Projet */
+.project {
+  width: 900px;
+  margin: 20px auto;
+  padding: 30px;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  text-align: center;
+}
+
+.project h3 {
+  margin-top: 0;
+  font-size: 1.8em;
+  color: #1b3a57;
+  text-align: center;
+}
+
+.project p {
+  text-align: justify;
+  margin-top: 10px;
+}
+
+/* Galerie d'images */
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.gallery img {
+  width: 45%;
+  max-width: 400px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+.project-link {
+  display: inline-block;
+  margin-top: 10px;
+  margin-right: 10px;
+  padding: 8px 14px;
+  background-color: #2874a6;
+  color: white;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+.project-link:hover {
+  background-color: #1b3a57;
+}
+
+.project h3 {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  text-align: center;
+  font-size: 1.8em;
+  margin-top: 0;
+  color: #1b3a57;
+}
+
+
+@media screen and (max-width: 1000px) {
+  .project {
+    width: 100%;
+    max-width: 90%;
+  }
+}
